<resources>
    <string name="app_name">StaffIin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_fname">Mani Kandan</string>
    <string name="role">Admin</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="role_text">Role</string>
    <string name="email">Email</string>
    <string name="staff_id_text">Staff ID</string>
    <string name="staff_phone_number_text">Phone number</string>
    <string name="staff_dob_text">DOB</string>
    <string name="staff_qualification_text">Qualification</string>
    <string name="staff_address_text">Address</string>
    <string name="user_id_text">User ID</string>
</resources>