<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <!-- Manage Staffs -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <!-- Manage Staffs Heading -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="My Profile"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="35dp"
                    tools:layout_editor_absoluteY="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Your profile information"
                    android:fontFamily="@font/lato_thin"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_container"
                android:orientation="vertical"
                android:layout_marginTop="50dp">

                <!-- User's name -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="User name:"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="900"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_name"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="600"/>
                    </LinearLayout>
                </LinearLayout>
                <!-- ID -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="User ID:"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="900"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/staff_id_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_id_text"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="600"/>
                    </LinearLayout>
                </LinearLayout>
                <!-- Role -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Role:"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="900"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/role_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/role_text"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="600"/>
                    </LinearLayout>
                </LinearLayout>
                <!-- Email -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Email:"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="900"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/email_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="600"/>
                    </LinearLayout>
                </LinearLayout>
                <!-- Phone number -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Phone number:"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="900"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/staff_phone_number_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/staff_phone_number_text"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="600"/>
                    </LinearLayout>
                </LinearLayout>
                <!-- DOB -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Date Of Birth:"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="900"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/staff_dob_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/staff_dob_text"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="600"/>
                    </LinearLayout>
                </LinearLayout>
                <!-- Qualification -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Qualification:"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="900"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/staff_qualification_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/staff_qualification_text"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="600"/>
                    </LinearLayout>
                </LinearLayout>
                <!-- Address -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Address:"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="900"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/staff_address_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/staff_address_text"
                            android:fontFamily="@font/lato_black"
                            android:textFontWeight="600"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/logout_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:backgroundTint="@color/grey"
                        android:text="Log Out"
                        android:textAllCaps="false"
                        android:fontFamily="@font/lato_medium"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>